feat(validation): add bounded validation primitives